Refactors main function
